<resources>
    <string name="app_name">Listenbee</string>

    <!-- VIEW -->
    <string name="song_cover_desc">Song Cover Image</string>
    <string name="image_view_desc">Profile Image</string>

    <!-- BUTTON -->
    <string name="login_btn">Log In</string>
    <string name="signup_btn">Sign Up</string>

    <string name="library_btn_desc">Library</string>
    <string name="profile_btn_desc">Profile</string>
    <string name="foryou_btn_desc">For You</string>

    <string name="fast_rewind_desc">Fast Rewind</string>
    <string name="fast_forward_desc">Fast Forward</string>
    <string name="play_desc">Play</string>
    <string name="add_song_desc">Add Song</string>
    <string name="delete_song_desc">delete song</string>

    <string name="save_btn_desc">Save</string>
    <string name="prev_btn_desc">Previous</string>
    <string name="upload_image_desc">Upload Image</string>

    <!-- TITLE -->
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="username_title">Username</string>
    <string name="age_title">Age</string>

    <string name="library_title">Library</string>
    <string name="profile_title">Profile</string>
    <string name="foryou_title">For You</string>
    <string name="pause_desc">Pause</string>

    <!-- CHANNEL -->
    <string name="channel_name">Player</string>
    <string name="channel_description">Notification featuring music player</string>
    <string name="waiting_message">Connecting with server… \nPlease do not switch windows!</string>

</resources>
