<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity"
    style="@style/AppTheme">

    <!-- TOOLBAR -->
    <RelativeLayout
        android:id="@+id/toolbar_container"
        style="@style/ToolbarContainer">

        <!-- BACK -->
        <ImageButton
            android:id="@+id/back_btn"
            android:src="@drawable/back_ic"
            android:contentDescription="@string/prev_btn_desc"
            android:layout_alignParentStart="true"
            android:onClick="previous"
            style="@style/SettingsBtn"/>

    </RelativeLayout>

    <!-- SIGN-UP FORM CONTAINER -->
    <LinearLayout
        android:id="@+id/login_form_container"
        style="@style/FormContainer">

        <TextView
            android:id="@+id/email_title"
            android:text="@string/email_title"
            style="@style/FormTitle"/>
        <EditText
            android:id="@+id/email_form"
            android:inputType="textEmailAddress"
            style="@style/FormField"/>

        <TextView
            android:id="@+id/password_title"
            android:text="@string/password_title"
            android:paddingTop="10dp"
            style="@style/FormTitle"/>
        <EditText
            android:id="@+id/password_form"
            android:inputType="textPassword"
            style="@style/FormField"/>

        <TextView
            android:id="@+id/username_title"
            android:text="@string/username_title"
            android:paddingTop="10dp"
            style="@style/FormTitle"/>
        <EditText
            android:id="@+id/username_form"
            android:inputType="textPersonName"
            style="@style/FormField"/>

        <TextView
            android:id="@+id/age_title"
            android:text="@string/age_title"
            android:paddingTop="10dp"
            style="@style/FormTitle"/>
        <EditText
            android:id="@+id/age_form"
            android:inputType="date"
            style="@style/FormField"/>

    </LinearLayout>

    <!-- SIGN-UP BUTTON -->
    <Button
        android:id="@+id/signup_btn"
        android:text="@string/signup_btn"
        android:onClick="toMainActivity"
        style="@style/LoginButton"/>

</RelativeLayout>