<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    style="@style/AppTheme">

    <!-- TOOLBAR -->
    <RelativeLayout
        android:id="@+id/toolbar_container"
        style="@style/ToolbarContainer">

        <!-- BACK -->
        <ImageButton
            android:id="@+id/back_btn"
            android:src="@drawable/back_ic"
            android:contentDescription="@string/prev_btn_desc"
            android:layout_alignParentStart="true"
            android:onClick="toMainActivity"
            style="@style/ToolbarBtn"/>

        <!-- BACK -->
        <ImageButton
            android:id="@+id/save_btn"
            android:src="@drawable/save_ic"
            android:contentDescription="@string/save_btn_desc"
            android:layout_alignParentEnd="true"
            android:onClick="saveInfo"
            style="@style/ToolbarBtn"/>

    </RelativeLayout>


    <!-- PROFILE IMAGE -->
    <ImageButton
        android:id="@+id/upload_image"
        android:contentDescription="@string/upload_image_desc"
        android:src="@drawable/upload_photo_ic"
        android:onClick="uploadPhoto"
        style="@style/UploadImageBtn" />

    <!-- PROFILE INFO -->
    <LinearLayout
        android:id="@+id/login_form_container"
        style="@style/FormContainer">

        <TextView
            android:id="@+id/username_title"
            android:text="@string/username_title"
            android:paddingTop="20dp"
            style="@style/FormTitle"/>
        <EditText
            android:id="@+id/username_form"
            android:inputType="textPersonName"
            style="@style/FormField"/>

        <TextView
            android:id="@+id/email_title"
            android:text="@string/email_title"
            style="@style/FormTitle"/>
        <EditText
            android:id="@+id/email_form"
            android:inputType="textEmailAddress"
            style="@style/FormField"/>

        <TextView
            android:id="@+id/password_title"
            android:text="@string/password_title"
            android:paddingTop="10dp"
            style="@style/FormTitle"/>
        <EditText
            android:id="@+id/password_form"
            android:inputType="textPassword"
            style="@style/FormField"/>

    </LinearLayout>

</RelativeLayout>