<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    style="@style/AppTheme">

    <!-- APPLICATION ICON -->
    <!-- TODO -->

    <!-- APPLICATION NAME -->
    <!-- TODO -->

    <!-- LOG-IN FORM CONTAINER -->
    <LinearLayout
        android:id="@+id/login_form_container"
        style="@style/LoginContainer">

        <TextView
            android:id="@+id/email_title"
            android:text="@string/email_title"
            style="@style/LogInTitle"/>

        <EditText
            android:id="@+id/email_form"
            android:inputType="textEmailAddress"
            style="@style/LogInForm" />

        <TextView
            android:id="@+id/password_title"
            android:text="@string/password_title"
            android:paddingTop="10dp"
            style="@style/LogInTitle"/>

        <EditText
            android:id="@+id/password_form"
            android:inputType="textPassword"
            style="@style/LogInForm"/>

    </LinearLayout>

    <!-- SIGN-IN BUTTON -->
    <!-- FIXME -->
    <Button
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:onClick="toMainActivity"
        style="@style/LoginButton"/>

    <!-- SIGN-UP -->
    <Button
        android:id="@+id/signup_btn"
        android:text="@string/signup_btn"
        android:onClick="toSignUpActivity"
        style="@style/SignUpButton"/>

</RelativeLayout>