<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_fragment"
    style="@style/Fragment">

    <!-- TOOLBAR -->
    <RelativeLayout
        android:id="@+id/toolbar_container"
        style="@style/ToolbarContainer">

        <!-- TITLE -->
        <TextView
            android:id="@+id/title_fragment"
            android:text="@string/profile_title"
            style="@style/FragTitle"/>

        <!-- SETTINGS -->
        <ImageButton
            android:id="@+id/settings_btn"
            android:src="@drawable/settings_ic"
            android:contentDescription="@string/settings_btn_desc"
            android:layout_alignParentEnd="true"
            android:onClick="toSettings"
            style="@style/SettingsBtn"/>

    </RelativeLayout>

    <!-- DIVIDER -->
    <View
        android:id="@+id/divider"
        style="@style/Divider"/>

    <!-- PROFILE IMAGE -->
    <ImageView
        android:id="@+id/profile_image"
        android:contentDescription="@string/image_view_desc"
        style="@style/ProfileImage" />

    <!--PROFILE INFO -->
    <LinearLayout
        android:id="@+id/profile_info_container"
        style="@style/ProfileInfo">

        <TextView
            android:id="@+id/username_title"
            android:text="@string/username_title"
            style="@style/InfoTitle"/>
        <TextView
            android:id="@+id/username_field"
            style="@style/InfoDesc"/>

        <TextView
            android:id="@+id/email_title"
            android:text="@string/email_title"
            android:paddingTop="10dp"
            style="@style/InfoTitle"/>
        <TextView
            android:id="@+id/email_field"
            style="@style/InfoDesc"/>

    </LinearLayout>

</RelativeLayout>